force-app/main/default/objects/Sreekar_CI_Job_Test__c/Sreekar_CI_Job_Test__c.object-meta.xml
<CustomObject>
    <description>A Custom object created by sreekar to perform and test CI Jobs.</description>
    <label>Sreekar CI Job Test</label>
    <nameField>
        <label>Sreekar CI Job Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sreekar_CI_Job_Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>