force-app/main/default/objects/Sreekar_CI_Job_Test__c/fields/CI_Job_Test_No__c.field-meta.xml
<CustomField>
    <fullName>CI_Job_Test_No__c</fullName>
    <label>CI Job Test No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>