force-app/main/default/objects/Sreekar_CI_Job_Test__c/fields/CI_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>CI_Job_Type__c</fullName>
    <label>CI Job Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>backup to VCS</fullName>
            </value>
            <value>
                <fullName>Deploy From SF Org</fullName>
            </value>
            <value>
                <fullName>Deploy SFDX Source from VCS</fullName>
            </value>
            <value>
                <fullName>pkg from sf</fullName>
            </value>
            <value>
                <fullName>pkg from VCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>