force-app/main/default/objects/Sreekar_CI_Job_Test__c/fields/CI_Test_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>CI_Test_Job_Name__c</fullName>
    <label>CI Test Job Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>